crates/diffler/src/ui/snapshots/diffler__ui__diff__tests__markdown_diff_highlights_headings_and_inline_code.snap
---
source: crates/diffler/src/ui/diff.rs
expression: render(&mut app).backend()
---
" c add comment · r reply · m mark viewed · C see comment list · ? help                                                  "
" Files                           Diff                                                                                   "
"▌○ notes.md               +6 -0  untracked notes.md                                                          +6 -0 █████"
"                                 @@ -0,0 +1,6 @@                                                                        "
"                                ▌        1 # Recording notes                                                            "
"                                ▌        2                                                                              "
"                                ▌        3 Use `record()` and set **duration** first.                                   "
"                                ▌        4                                                                              "
"                                ▌        5 1. call `search(q)`                                                          "
"                                ▌        6 2. share it                                                                  "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
" DIFF  fixture@main · mcp off · viewed 0/1 files                                                                        "
