crates/diffler/src/ui/snapshots/diffler__ui__diff__tests__markdown_in_a_comment_body_renders_styled.snap
---
source: crates/diffler/src/ui/diff.rs
expression: terminal.backend()
---
" c add comment · r reply · m mark viewed · C see comment list · ? help                                                  "
" Files                           Diff                                                                                   "
" ▾ src                    +1 -1  modified  src/lib.rs · 1 comment                                            +1 -1 █████"
"▌  ● lib.rs ·1            +1 -1  answer                                                                                 "
" + ci.yml                 +1 -0  @@ -1,3 +1,3 @@                                                                        "
" ○ todo.md                +1 -0     1    1 pub fn answer() -> u32 {                                                     "
"                                  ▌ reviewer · open                                                                     "
"                                  ▌ call foo() then make it bold                                                        "
"                                  ▌                                                                                     "
"                                ▌   2          41                                                                       "
"                                ▌        2     42                                                                       "
"                                    3    3 }                                                                            "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
" DIFF  fixture@main · mcp off · viewed 0/3 files                                                                        "
