crates/diffler/src/ui/snapshots/diffler__ui__diff__tests__range_diff_from_the_log_renders_with_a_range_header.snap
---
source: crates/diffler/src/ui/diff.rs
expression: render(&mut app).backend()
---
" c add comment · r reply · m mark viewed · C see comment list · ? help                                                  "
" Files                           Diff d9516cb..df770b9                                                                  "
" ▾ src                    +4 -1  new file  ci.yml                                                            +1 -0 █████"
"   ● lib.rs               +1 -1  @@ -0,0 +1,1 @@                                                                        "
"   + util.rs              +3 -0 ▌        1 on: push                                                                     "
"▌+ ci.yml                 +1 -0                                                                                         "
" ● notes.txt              +1 -0                                                                                         "
" + todo.md                +1 -0                                                                                         "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
" DIFF  fixture@main · mcp off · viewed 0/5 files                                                                        "
