crates/diffler/src/ui/snapshots/diffler__ui__diff__tests__renders_the_comments_sidebar.snap
---
source: crates/diffler/src/ui/diff.rs
expression: render(&mut app).backend()
---
" c add comment · r reply · m mark viewed · C see comment list · ? help                                                  "
" Files                           Diff                                                      Comments (1) · flat list     "
" ▾ src                    +1 -1  new file  ci.yml · 1 comment                 +1 -0 █████ ▌○ reviewer ci.yml:1          "
"   ● lib.rs               +1 -1  @@ -0,0 +1,1 @@                                          ▌ this line reads oddly and   "
"▌+ ci.yml ·1              +1 -0 ▌        1 on: push                                       ▌ should wrap across the      "
" ○ todo.md                +1 -0   ▌ reviewer · open                                       ▌ column                      "
"                                  ▌ this line reads oddly and should wrap across the                                    "
"                                  ▌ column                                                                              "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
" DIFF  fixture@main · mcp off · viewed 0/3 files                                                                        "
