crates/diffler/src/ui/snapshots/diffler__ui__diff__tests__review_layout_sidebar_buckets_viewed_files.snap
---
source: crates/diffler/src/ui/diff.rs
expression: render(&mut app).backend()
---
" Hint: c comment  r reply  v viewed  C comments  ? help                                                                 "
" Files                           Diff                                                                                   "
" ▾ To review (2)                 modified  src/lib.rs                                                        +1 -1 █████"
"▌  ● src/lib.rs           +1 -1  answer                                                                                 "
"   ○ todo.md              +1 -0  @@ -1,3 +1,3 @@                                                                        "
" ▸ Viewed (1)                       1    1 pub fn answer() -> u32 {                                                     "
"                                ▌   2          41                                                                       "
"                                ▌        2     42                                                                       "
"                                    3    3 }                                                                            "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
" DIFF  fixture@main  mcp off  viewed 1/3 files                                                                          "
