crates/diffler/src/ui/snapshots/diffler__ui__diff__tests__review_verdict_picker_renders_its_choices.snap
---
source: crates/diffler/src/ui/diff.rs
expression: render(&mut app).backend()
---
" c add comment · r reply · m mark viewed · C see comment list · ? help                                                  "
" Files                           Diff                                                                                   "
" ▾ src                    +1 -1  new file  ci.yml                                                            +1 -0 █████"
"   ● lib.rs               +1 -1  @@ -0,0 +1,1 @@                                                                        "
"▌+ ci.yml                 +1 -0 ▌        1 on: push                                                                     "
" ○ todo.md                +1 -0                                                                                         "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
" Submit review: PR #7 ──────────────────────────────────────────────────────────────────────────────────────────────────"
" posting 3: 2 comments, 1 thread reply                                                                                  "
" 2 agent replies held back (the forge post is yours)                                                                    "
" 1 whole-file comment held back (a review carries line comments only)                                                   "
"Actions                                                                                                                 "
" a  approve                                                                                                             "
" x  request changes                                                                                                     "
" c  comment only                                                                                                        "
" esc  cancel                                                                                                            "
