crates/diffler/src/ui/snapshots/diffler__ui__diff__tests__right_click_on_a_line_lists_its_verbs_and_a_click_runs_one.snap
---
source: crates/diffler/src/ui/diff.rs
expression: render(&mut app).backend()
---
" c add comment · r reply · m mark viewed · C see comment list · ? help                                                  "
" Files                           Diff                                                                                   "
" ▾ src                    +1 -1  modified  src/lib.rs                                                        +1 -1 █████"
"▌  ● lib.rs               +1 -1  answer                                                                                 "
" + ci.yml                 +1 -0  @@ -1,3 +1,3 @@                                                                        "
" ○ todo.md                +1 -0     1    1 pub fn answer() -> u32 {                                                     "
"                                ▌   2          41                                                                       "
"                                ▌        2     42                                                                       "
"                                    3    3 }                                                                            "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                        Actions ────────────────────────────────────────────────────────────────                        "
"                        >                                                                                               "
"                        comment on this line                                                c                           "
"                        select several rows                                                 V                           "
"                        find references to a symbol on this line (again for the next one)   *                           "
"                        open this file in your editor                                       e                           "
"                        blame this file: see who last changed each line                     B                           "
"                        mark this file or folder as viewed                                  m                           "
"                        copy this file's comments as markdown, or the selection             y                           "
"                        j/k move · enter run · esc close                                                                "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
" DIFF  fixture@main · mcp off · viewed 0/3 files                                                                        "
